botton jump on long titles fix

--- a/beshop/css/main.css
+++ b/beshop/css/main.css
@@ -7460,7 +7460,9 @@ input[type=range]::-ms-thumb {
 
 .woocommerce-loop-product__title {
   color: #333333 !important;
-  font-size: 12px !important; }
+  font-size: 12px !important;
+  line-height: 1.2;
+  min-height: 40px; }
 
 .woocommerce ul.products li.product a img {
   width: auto;
